--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"ethers": "^6.6.0"
+		"@thirdweb-dev/sdk": "^3.10.22",
+		"ethers": "^5.7.2"
 	}
 }
